apps/affine/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: affine-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: affine-tls
  routes:
    - match: Host(`affine.matiix310.dev`)
      kind: Rule
      services:
        - name: affine
          port: 3010
